--- a/questr/static/css/index.css
+++ b/questr/static/css/index.css
@@ -112,19 +112,62 @@ p{font-size: 16px;font-weight: 100;margin: 7px 0;color: #666;}
 
 
 
-
-
-
-
 .navbar {
-	background: white;
+	background: transparent;
 	font-size: 12px;
 	min-height: 13px;
-	margin-bottom: 5px;
+	margin-bottom: 0px;
 	padding: 0;
 	z-index: 999;
 	border: none;
+	margin-top: 20px;
 }
+
+a.navbar-brand {
+  font-size: 28px;
+  line-height: 1.042;
+  font-weight: 700;
+   z-index: 999;
+   color: white;
+    margin-left: 50px;
+    padding: 0;
+}
+	
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.1);
+  
+  background: rgba(255,255,255,0.18);
+  border-radius: 10%;
+  
+  border: none;
+  padding-top: 7px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  
+  
+  margin-right: 10px;
+  font-weight: 200;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: white;
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.7);
+  background-color: rgba(255,255,255,0.50);
+  border: none;
+  
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+	color: white;
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.7);
+  background-color: rgba(255,255,255,0.50);
+  border: none;
+}
+
+
+
 @media (min-width: 768px) {
   .navbar-header {
     float: left;
@@ -325,75 +368,7 @@ select[multiple].navbar-input {
   line-height: 1.4;
   border-radius: 6px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.navbar {
-	background: transparent;
-	font-size: 12px;
-	min-height: 13px;
-	margin-bottom: 0px;
-	padding: 0;
-	z-index: 999;
-	border: none;
-	margin-top: 20px;
-}
-
-a.navbar-brand {
-  font-size: 28px;
-  line-height: 1.042;
-  font-weight: 700;
-   z-index: 999;
-   color: white;
-    margin-left: 50px;
-    padding: 0;
-}
 	
-.navbar-default .navbar-nav > li > a {
-  color: white;
-  text-shadow: 0px 1px 2px rgba(0,0,0,0.1);
-  
-  background: rgba(255,255,255,0.18);
-  border-radius: 10%;
-  
-  border: none;
-  padding-top: 7px;
-  padding-bottom: 9px;
-  padding-left: 10px;
-  
-  
-  margin-right: 10px;
-  font-weight: 200;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: white;
-  text-shadow: 0px 1px 2px rgba(0,0,0,0.7);
-  background-color: rgba(255,255,255,0.50);
-  border: none;
-  
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-	color: white;
-  text-shadow: 0px 1px 2px rgba(0,0,0,0.7);
-  background-color: rgba(255,255,255,0.50);
-  border: none;
-}	
 
 	
 /*========== 1.   ==============*/	
